extend json api with tagsets, collections and paging